--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<script src="assets/engine/init.js"></script>
+		<script src="assets/engine/eventhandler.js"></script>
 		<script src="assets/engine/game.js"></script>
 	</head>
 	<body onLoad="init();">
