Child-parent model
Child-parent model ve hře je zaveden. Jednotlivosti je ještě třeba
dodělat. Dále je přidán vector2 ze three.js

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<script src="assets/engine/init.js"></script>
+		<script src="assets/engine/vector2.js"></script>
+		<script src="assets/engine/gameobject.js"></script>
+		<script src="assets/engine/guiobject.js"></script>
 		<script src="assets/engine/eventhandler.js"></script>
 		<script src="assets/engine/game.js"></script>
 	</head>
