--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script src="assets/engine/vector2.js"></script>
 		<script src="assets/engine/gameobject.js"></script>
 		<script src="assets/engine/guiobject.js"></script>
+		<script src="assets/engine/geometries.js"></script>
 		<script src="assets/engine/gui.js"></script>
 		<script src="assets/engine/eventhandler.js"></script>
 		<script src="assets/engine/game.js"></script>
