--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html5>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<script src="assets/engine/init.js"></script>
 		<script src="assets/engine/vector2.js"></script>
 		<script src="assets/engine/gameobject.js"></script>
 		<script src="assets/engine/guiobject.js"></script>
 		<script src="assets/engine/geometries.js"></script>
 		<script src="assets/engine/gui.js"></script>
+		<script src="assets/engine/evaction.js"></script>
 		<script src="assets/engine/eventhandler.js"></script>
 		<script src="assets/engine/game.js"></script>
 	</head>
