--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<script src="assets/engine/vector2.js"></script>
 		<script src="assets/engine/gameobject.js"></script>
 		<script src="assets/engine/guiobject.js"></script>
+		<script src="assets/engine/geometrie.js"></script>
 		<script src="assets/engine/geometries.js"></script>
+		<script src="assets/engine/tile.js"></script>
 		<script src="assets/engine/gui.js"></script>
 		<script src="assets/engine/evaction.js"></script>
 		<script src="assets/engine/eventhandler.js"></script>
